--- a/package.json
+++ b/package.json
@@ -54,8 +54,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.2.0",
-    "typescript": "^5.0.0",
-    "validate-branch-name": "^1.3.0"
+    "typescript": "^5.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
