--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "graphql": "^16.6.0",
+    "graphql-request": "^6.1.0",
     "husky": "^8.0.3",
     "jest": "29.5.0",
     "lint-staged": "^13.2.2",
