--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "husky": "^8.0.3",
     "jest": "29.5.0",
     "lint-staged": "^13.2.2",
+    "nest-commander-testing": "^3.1.0",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
