--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "mysql2": "^3.3.2",
+    "nest-commander": "^3.7.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.16"
@@ -53,6 +54,7 @@
     "husky": "^8.0.3",
     "jest": "29.5.0",
     "lint-staged": "^13.2.2",
+    "nest-commander-testing": "^3.1.0",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
