--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,8 @@
     "noFallthroughCasesInSwitch": false,
     "paths": {
       "@/*": ["src/*"]
-    }
+    },
+    "esModuleInterop": true,
+    "resolveJsonModule": true
   }
 }
