--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "lodash": "^4.17.21",
     "mysql2": "^3.3.2",
     "nest-commander": "^3.7.1",
     "reflect-metadata": "^0.1.13",
@@ -47,6 +48,7 @@
     "@semantic-release/release-notes-generator": "^11.0.3",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
+    "@types/lodash": "^4.14.195",
     "@types/node": "18.16.12",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
