--- a/k8s/staging/config-map.yaml
+++ b/k8s/staging/config-map.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: howdusty-configmap
+  namespace: brumaire-howdusty-staging
 data:
   DB_CONNECTION: 'mysql'
   DB_HOST: '178.32.78.247'
