feat: add onlydust connection database

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,9 @@ DB_USERNAME=root
 DB_PASSWORD=
 
 GITHUB_ACCESS_TOKEN=
+
+ONLYDUST_HOST=
+ONLYDUST_PORT=
+ONLYDUST_DATABASE=
+ONLYDUST_USERNAME=
+ONLYDUST_PASSWORD=
