feat: rename variables and onlydust user

--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,8 @@ DB_PASSWORD=
 
 GITHUB_ACCESS_TOKEN=
 
-ONLYDUST_HOST=
-ONLYDUST_PORT=
-ONLYDUST_DATABASE=
-ONLYDUST_USERNAME=
-ONLYDUST_PASSWORD=
+ONLYDUST_DB_HOST=
+ONLYDUST_DB_PORT=
+ONLYDUST_DB_DATABASE=
+ONLYDUST_DB_USERNAME=
+ONLYDUST_DB_PASSWORD=
