--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "jest": "29.5.0",
     "lint-staged": "^13.2.2",
     "nest-commander-testing": "^3.1.0",
+    "pg-types": "^4.0.1",
     "prettier": "^2.3.2",
     "semantic-release": "^21.0.3",
     "source-map-support": "^0.5.20",
