--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/jest": "29.5.1",
     "@types/lodash": "^4.14.195",
     "@types/node": "18.16.12",
+    "@types/pg": "^8.10.2",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
@@ -64,7 +65,6 @@
     "jest": "29.5.0",
     "lint-staged": "^13.2.2",
     "nest-commander-testing": "^3.1.0",
-    "pg-types": "^4.0.1",
     "prettier": "^2.3.2",
     "semantic-release": "^21.0.3",
     "source-map-support": "^0.5.20",
