--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,9 @@ DB_USERNAME=root
 DB_PASSWORD=
 
 GITHUB_ACCESS_TOKEN=
+
+ONLYDUST_DB_HOST=
+ONLYDUST_DB_PORT=
+ONLYDUST_DB_DATABASE=
+ONLYDUST_DB_USERNAME=
+ONLYDUST_DB_PASSWORD=
