--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lodash": "^4.17.21",
     "mysql2": "^3.3.2",
     "nest-commander": "^3.7.1",
+    "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.16"
@@ -51,6 +52,7 @@
     "@types/jest": "29.5.1",
     "@types/lodash": "^4.14.195",
     "@types/node": "18.16.12",
+    "@types/pg": "^8.10.2",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
