--- a/k8s/secret.example.yaml
+++ b/k8s/secret.example.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 data:
   DB_PASSWORD: '' # base64 encoded value
   GITHUB_ACCESS_TOKEN: '' # base64 encoded value
+  ONLYDUST_DB_PASSWORD: '' # base64 encoded value
 kind: Secret
 metadata:
   name: howdusty-secret
