build: reduce cron periodicity

--- a/k8s/staging/cronjob.yaml
+++ b/k8s/staging/cronjob.yaml
@@ -4,7 +4,7 @@ metadata:
   name: howdusty
   namespace: brumaire-howdusty-staging
 spec:
-  schedule: '* * * * *'
+  schedule: '0 4 * * *'
   jobTemplate:
     spec:
       template:
